--- a/style.css
+++ b/style.css
@@ -1,13 +1,17 @@
 body {
     overflow: hidden;
+    background-image: url("https://cdn.pixabay.com/photo/2017/12/29/01/42/nature-3046567_960_720.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 100vh;
 }
 
 .clock {
     width: 80vw;
     height: 80vh;
     border-radius: 50%;
-    background-color: darkgrey;
-    opacity: .6;
+    background-color: rgba(169, 169, 169, 0.548);
+    opacity: .9;
     position: relative;
     display: flex;
     justify-content: center;
@@ -24,7 +28,7 @@ body {
     height: 100%;
     margin: auto;
     transform: rotate(var(--tate));
-    
+    z-index: 9;
 }
 
 #render {
@@ -77,7 +81,7 @@ body {
     bottom: 50%;
     border: 2px solid green;
     color: white;
-    
+    z-index: 8;
 }
 
 .min {
@@ -90,7 +94,7 @@ body {
     transform-origin: bottom;
     transform: rotate();
     bottom: 50%;
-
+    z-index: 7;
 }
 
 .sec {
@@ -102,6 +106,7 @@ body {
     height: 50%;
     transform-origin: bottom;
     transform: rotate();
+    z-index: 7;
 }
 /*
 .mili {
