--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     overflow: hidden;
-    background-image: url("https://cdn.pixabay.com/photo/2017/12/29/01/42/nature-3046567_960_720.jpg");
+    background: url("https://cdn.pixabay.com/photo/2017/12/29/01/42/nature-3046567_960_720.jpg"), lightskyblue;
     background-repeat: no-repeat;
     background-size: cover;
     height: 100vh;
